Messaging: Toggable keyboard emoticons access
 * Allows keyboards to always display the line return key

Change-Id: I9ecb19733f707d35771255018afebf0b5cda5e6d
Signed-off-by: AdrianDC <radian.dc@gmail.com>

--- a/res/values/komodo_strings.xml
+++ b/res/values/komodo_strings.xml
@@ -19,4 +19,7 @@
     <!-- Swipe to delete -->
     <string name="swipe_right_deletes_conversation_text">Swipe right deletes conversation</string>
 
+     <!-- Show emoticons -->
+    <string name="show_emoticons_pref_title">Emoticons access</string>
+    <string name="show_emoticons_pref_summary">Show the emoticons key on the keyboard</string>
 </resources>
